syntax = "proto3";
package kratos.api;

option go_package = "babycare/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Log log = 3;
  ErrorHandle error = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int64 max_idle_conns = 3;
    int64 max_open_conns = 4;
    bool debug = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Log {
  string filename = 1;
  int32 max_size = 2;
  int32 max_backup = 3;
  int32 max_age = 4;
  bool compress = 5;
}

message ErrorHandle {
  message ErrorMessages {
    repeated ErrorMessage error_messages = 1;
  }
  message ErrorMessage {
    string error_reason = 1;
    string message = 2;
  }
  map<string, ErrorMessages> handle = 1;
  string default = 2;
}